--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style/index.css">
-    <link rel="stylesheet" href="standard/standard.css">
+    <link rel="stylesheet" href="public/style/index.css">
+    <link rel="stylesheet" href="public/standard/standard.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,8 +14,8 @@
 <body>
 
     <div id="LogoBox">
-        <img src="img/HybridGymLogo.png" alt="HybridGymLogo" id="HybridGymLogo">
-        <a href="overview.html">
+        <img src="public/img/HybridGymLogo.png" alt="HybridGymLogo" id="HybridGymLogo">
+        <a href="public/overview.html">
             <div id="startButton">Start</div>
         </a>
     </div>
@@ -23,8 +23,8 @@
 
 
     <div id="PartnerFooter">
-        <img src="img/ZeilerbergCampingLogo.png" alt="ZeilerbergCampingLogo">
-        <img src="img/cardClash-Logo.png" alt="cardClash-Logo">
+        <img src="public/img/ZeilerbergCampingLogo.png" alt="ZeilerbergCampingLogo">
+        <img src="public/img/cardClash-Logo.png" alt="cardClash-Logo">
         <div id="UndergroundLogo">
             <p id="Underground">Underground</p>
             <p id="theAwakening">The Awakening</p>
